--- a/docs/report.tex
+++ b/docs/report.tex
@@ -7,8 +7,7 @@
 
 \newcommand{\code}[1]{\texttt{#1}}
 
-\title{SkyeFS: A FUSE Filesystem Providing Distributed Directories using Giga+
-and PVFS}
+\title{SkyeFS: Distributed Directories using Giga+ and PVFS}
 \author{Anthony Chivetta \url{<anthony@chivetta.org>}\\Swapnil Patil \& Garth
 Gibson}
 \date{DRAFT --- \today}
@@ -67,18 +66,18 @@ same server called ``p00000'' inside the logical directory to represent the
 first Giga+ partition.  When this partition splits, a new directory ``p00001''
 will be created adjacent to it to store the files in the new partition.  
 
-When a new PVFS directory is created, the client selects a metadata handle
-for the directory using round-robin assignment for the server.  Unfortunately,
-the PVFS client API does not currently provide any way to influence the
-server selection.  Until this feature is available, we work around the problem
-by repeatedly creating new directories until the resulting directory is on the
+The PVFS client uses round-robin assignment for selecting the metadata server
+on which it will create a new  object.  Unfortunately, the PVFS client API
+does not currently provide any way to influence this server selection.  When
+creating PVFS directories for new partitions, we work around the problem by
+repeatedly creating new directories until the resulting directory is on the
 correct server.  Future versions of SkyeFS might cache these directories to
 limit extraneous creates.
 
 \subsection{Client/Server Architecture}
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{figure-architecture}
+\includegraphics[width=3in]{figure-architecture}
 \end{center}
 \caption{SkyeFS Architecture Diagram}
 \end{figure}
@@ -98,92 +97,78 @@ struct skye_directory {
 \label{fig:skyedir}
 \end{figure}
 
-Giga+ has additional per-directory metadata that it must maintain in order to
-manage each directory's partitions.  SkyeFS uses a small server process,
-\code{skye\_server}, located on each PVFS server to manage this metadata and
-ensure consistency for the directories and partitions resident on that server.
-The \code{skye\_server} has a cache of \code{skye\_directory} structures for
-recently accessed directories.  This metadata in the \code{skye\_directory}
-structure can be regenerated from PVFS at any time.  This allows the
+Giga+ has metadata that it must maintain in order to manage each directory's
+partitions.  SkyeFS uses a small server process, \code{skye\_server}, located
+on each PVFS server to manage this metadata and ensure consistency for the
+directories and partitions resident on that server.  The \code{skye\_server}
+has a cache of \code{skye\_directory} structures which store this metadata.
+This metadata can be regenerated from PVFS at any time, allowing the
 \code{skye\_server} to fail or evict items from its cache at any time without
 the risk of leaving the system in an inconsistent state.
 
 Each client runs a \code{skye\_client} process that provides a FUSE filesystem
-and issues requests to the \code{skye\_server}s and PVFS directly through the
-PVFS system interface.  For most operations, the server is a simple adaption
-of the \code{pvfs2-fuse} code to use the lowlevel FUSE API.  However, metadata
-operations which require path name resolution or object creation are forwarded
-through the \code{skye\_server} to prevent race conditions.  To speed
-operation, the client also maintains a cache of the \code{giga\_mapping} for
-recently accessed directories.
+and issues requests to the \code{skye\_server}s using ONC RPC and PVFS using
+the PVFS system interface.  For most operations, the client is a simple
+adaption of the \code{pvfs2-fuse} code to use the lowlevel FUSE API.  However,
+metadata operations which require path name resolution or object creation are
+forwarded through the \code{skye\_server} to prevent race conditions.  To
+speed operation, the client also maintains a cache of the \code{giga\_mapping}
+for recently accessed directories.
 
-For performance and load-balance considerations, locality between the
+For performance and load-balance reasons, locality between the
 \code{skye\_\-server} process and the PVFS server to which it is making
-requests is maintained whenever possible.  Each RPC response includes an error
-code.  Upon receiving a RPC request, the server will determine if it owns the
-partition on which the request will operate.  If not, the server will return
-EAGAIN as the error code and provide the client with a copy of its own mapping
-for the directory.  Upon receiving this error code, the client will read the
-server provided mapping and merge that information with its local version.
-The client will then reattempt the RPC call to a new \code{skye\_\-server} as
-per the updated mapping.  This ensures both that locality as maintained and
-that the client's cached mapping will tend toward reality.
+requests is maintained whenever possible.  Upon receiving a RPC request, the
+server will first check if it owns the partition to be accessed by the
+request.  If not, the server will return the error EAGAIN and provide
+the client with a copy of its own mapping for the directory.  Upon receiving
+this error, the client will read the server provided mapping and merge that
+information with its local version.  The client will then reattempt the RPC
+call to the new \code{skye\_\-server} as per the updated mapping.  This
+ensures both that locality is maintained and that the client's cached mapping
+will tend toward reality.
 
-The \code{skye\_\-server} process is also used to prevent a variety of race conditions.
-By forwarding all operations that operate on a file path or name, as opposed to
-only a PVFS handle, to the \code{skye\_\-server} we ensure that splitting does not
-interfere with successful execution of thees commands.  For example, during a
-create operation, the \code{skye\_\-server} thread issuing the create will lock a data
-structure for the directory so that the partition is prevented from splitting
-until the create can finish.  However, while simply forwarding all the work of
-potentially conflicting operations to a \code{skye\_\-server} would be an easy solution to
-concurrency problems, we attempt to offload the absolute minimum amount of work
-to the \code{skye\_\-server} to ensure that it does not become a bottleneck.
+The most important job of the \code{skye\_server} is to prevent race
+conditions during splitting.  Any operation that must resolve a pathname (such
+as a lookup, create, or rename) needs to have an accurate Giga+ bitmap for the
+directory so that they can operate on the correct partition.  By forwarding
+these operations to the \code{skye\_server}, the server can ensure they happen
+without interference from changing bitmaps.  There do exist schemes that would
+allow client applications do so some of these operations without the server in
+an optimistic manor; however, such schemes are error prone and overly
+complicated.
 
 \subsection{Path Resolution}
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{figure-resolve}
+\includegraphics[width=3in]{figure-resolve}
 \end{center}
 \caption{SkyeFS Name Resolution}
 \end{figure}
-\code{lookup()} needs to be able to determine the partition in which an object
-should live before it can issue the appropriate \code{PVFS\_\-sys\_\-lookup()}
-call to determine an object's handle.  For this to be done quickly, and with a
-minimum of PVFS calls, we use a \code{skye\_\-server} process to maintain in
-RAM a bitmap representing the state of a directory.  The \code{skye\_\-server}
-process runs on each PVFS MDS and is responsible for coordinating access to
-the partitions living on that MDS.  It implements a handful for ONC RPC calls,
-including \code{lookup()}, that are used by the \code{skye\_\-client} to
-operate in or on the partitions handled by that server.  In the case of
-lookup(), the server consults its mapping and issues a PVFS lookup for a
-rewritten path including the partition of the object.
+The FUSE lowlevel API uses a \code{lookup(inode, name)} callback to perform
+path resolution.  We use the PVFS handle for an object as the FUSE inode to
+avoid keeping a lookup table on the client.  PVFS provides a
+\code{PVFS\_\-sys\_\-ref\_\-lookup(handle, name)} which is analogous to the
+FUSE \code{lookup} function.  Our \code{skye\_server} wraps this PVFS function
+to both resolve the Giga+ partition and the object itself and exposes an
+\code{lookup} RPC to accomplish this.  When the \code{skye\_client} receives a
+\code{lookup} callback, it consults its cached bitmap (if any) and then
+makes an RPC call to the responsible \code{skye\_server}, retrying in the
+event that an EAGAIN is returned.  By resolving both the partition and
+requested object in the server, we avoid race conditions due to concurrent
+splits.  \footnote{For example, issuing the RPC \code{lookup(NULL, ``foo'')}
+would return the PVFS handle of ``/p00004/foo'' if ``foo'' was stored in the
+fifth partition of the filesystem root.  If we let that handle be $h$, then
+\code{lookup($h$, ``bar'')} would return the PVFS handle of
+``/p00004/foo/p00002/bar'' if ``bar'' is in the third partition of ``foo''.
+In this manor, any logical path can be resolved to its PVFS handle in a manor
+opaque to the caller.}
 
-FUSE uses a \code{lookup(inode, name)} callback to perform path resolution.  
-Given this layout, we must determine how clients are to translate logical path
-names to their respective PVFS objects.  The PVFS system interface uses PVFS
-handles to specify operands for most filesystem operations.  PVFS provides
-\code{PVFS\_\-sys\_\-lookup(path)} and
-\code{PVFS\_\-sys\_\-ref\_\-lookup(parent handle, name)} to translate either
-an absolute or relative path to a PVFS handle.  We implement our own
-\code{lookup(parent handle, name)} that resolves one logical path component.
-For example, calling \code{lookup(NULL, ``foo'')} would return the PVFS handle
-of ``/p00004/foo'' if ``foo'' was stored in the fifth partition of the
-filesystem root.  If we let that handle be $h$, then calling \code{lookup($h$,
-``bar'')} would return the PVFS handle of ``/p00004/foo/p00002/bar'' if
-``bar'' is in the third partition of ``foo''.  In this manor, any logical path
-can be resolved to its PVFS handle in a manor opaque to the caller.  For
-convenience, we provide a \code{resolve(path)} that iterates through the
-provided path calling \code{lookup()} at each step.
-
-PVFS metadata handles do not change when their objects are moved between
-directories.  Therefore, the handle returned by lookup is guaranteed to continue
-to be a valid reference to the object for the duration of the object's
-existence.  This is true even if the partition holding an object splits or the
-logical directory is moved elsewhere in the directory tree.  As a result, we can
-safely hold a PVFS handle for the duration of a FUSE operation or between calls
-to \code{open()} and \code{close()} without having to check its validity.
-
+As PVFS metadata handles do not change when their objects are moved between
+directories, the handle returned by \code{lookup} is guaranteed to continue to
+be a valid reference to the object for the duration of the object's existence.
+This is true even if the partition holding an object splits or the logical
+directory is moved elsewhere in the directory tree.  As a result, we can
+safely return a PVFS handle to FUSE in the form of an inode umber.
 
 \subsection{Metadata Persistence}
 Closely related to the issue of physical layout is that of persisting SkyeFS
@@ -245,7 +230,7 @@ without leaving the system in an inconsistent state.
 \subsection{Splitting and file creation}
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{figure-create}
+\includegraphics[width=3in]{figure-create}
 \end{center}
 \caption{SkyeFS Create Procedure}
 \end{figure}
@@ -436,7 +421,7 @@ the speed at which a split can progress.
 \subsection{Directory Listing}
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{figure-readdir}
+\includegraphics[width=3in]{figure-readdir}
 \end{center}
 \caption{SkyeFS readdir()}
 \end{figure}
@@ -456,7 +441,7 @@ for which this approach fails are too big for \code{readdir()} to be useful.
 \subsection{Other Operations}
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{figure-other}
+\includegraphics[width=3in]{figure-other}
 \end{center}
 \caption{SkyeFS IO Operations}
 \end{figure}
@@ -517,36 +502,161 @@ we take on the PVFS file system we are able to ensure that any state of PVFS
 is recognizable as either complete or the result of an unfinished action which
 can then be resumed or aborted.
 
-\subsection{Client and Server Thread Models}
-Our current threading model for the \code{skye\_\-server} is based on the
-initial Giga+ prototype system in which a new thread is spawned for each
-connecting client.  When large numbers of clients are active this has the
-potential to be a performance issue.  Other architectures for the server
-should be considered. 
-
-On the \code{skye\_\-client} side we currently single thread the FUSE process
-causing all operations to be serialized.  This is necessary because our
-initial tests showed that the PVFS has the potential to stall when many
-requests using the synchronous operations are in flight.  The recommendation
-from PVFS developers is to switch to the low level FUSE interface and the
-asynchronous version of PVFS operations.
+\section{Correctness}
+To ensure correctness of the system, we tested against a modified version of
+Pawel Dawidek's fstest suite.\footnote{Available at
+\url{http://people.freebsd.org/~pjd/fstest/}}  Our version was limited to the
+tests for \code{chflags}, \code{chmod}, \code{chown}, \code{mkdir},
+\code{open}, \code{readdir}, \code{rename}, \code{rmdir} and \code{unlink}.
+We removed tests that required hard links, which our filesystem does not
+support.
 
 \section{Performance Analysis}
 
-\emph{To be completed.}
+\subsection{Method}
+Tests were performed on the Marmot cluster consisting of 128 nodes with two
+single core Opteron CPUs, 16GiB of RAM, one SATA disk and Gigabit Ethernet.
+PVFS was configured with default settings.  In production configurations, we
+expect that PVFS would be run on fast disk arrays.  To prevent the single 7200
+RPM disks available from artificially limiting throughput, we ran all
+experiments with PVFS configured to use a tmpfs for storage.  In each
+experiment, both the clients and servers were located on the same set of
+machines
 
-\section{Conclusion and Take Aways}
-We've described the design and implementation of the SkyeFS system.  The
-following key design decisions were crucial to the success of the design.
+\subsection{File Creation}
+\begin{figure}
+\begin{center}
+\includegraphics[width=3in]{graph-create}
+\end{center}
+\caption{SkyeFS Empty File Creation Throughput}
+\end{figure}
 
-\begin{itemize}
-\item Minimization of work on the server by passing file handles back to the client
-for non-conflicting operations
-\item Avoidance of cross-RPC locks by either optimistic with retry strategies (in
-the case of rename) or splitting operations into smaller atomic pieces (in the
-case of remove).
-\item Prevention of inconsistency issues by limiting amount of additional metadata
-stored.
-\end{itemize}
+To test directory insert rates we started with an empty filesystem and created
+a single directory.  For each server, we started 10 clients simultaneously
+which all attempted to insert uniquely named files into the directory.  We
+recorded the overall rate of inserts in the entire system.
 
+For 32 servers, the system reached a peak throughput of over 15k creates per second
+after 4 minutes and 30 seconds.  For 16 servers, peak throughput was 8k
+creates per second after 2 minutes and 25 seconds.  And for 8 servers, peak
+throughput was 4k creates per seconds after 1 minutes and 55 seconds.
+
+This experiment provides the expected linear scaling of throughput after the
+system has become load balanced.  We believe the increased time required to
+get to a load-balanced state for the 32 server experiment is due to higher
+resource contention during the first few splits.  Future work might look at
+ways to quicken these first few splits in the event of very high load to
+prevent this problem.
+
+We note that the use of FUSE turns each \code{mknod} into a pair of
+\code{lookup} and \code{mknod} requests.  The use of the SkyeFS operations
+directly, e.g. as part of a shared library, might be able to drastically
+improve this performance by avoiding the superfluous \code{lookup}.
+
+\subsection{Readdir}
+\begin{figure}
+\begin{center}
+\includegraphics[width=3in]{graph-readdir}
+\end{center}
+\caption{SkyeFS Readdir Performance}
+\end{figure}
+One of the desirable properties of the Giga+ algorithm is that it keeps the
+overhead for a \code{readdir} small in the case of small directories.  To test
+this, we created directories of various sizes and measured the time it took a
+single client to read all the entries in the directory.  We repeated this
+experiment with 8, 16, and 32 servers.
+
+The client was able to complete a \code{readdir} for a directory with 1000
+entries in 0.1 seconds.  As expected, this increased slightly worse than
+linearly as the number of entries and partitions increased.  In the case of
+200k entries, a \code{readdir} took approximately 2.4 seconds.  No significant
+difference in performance was noted between the different server
+configurations.
+
+Further work might improve upon this performance by issuing the \code{readdir}
+for each partition in parallel.
+
+\subsection{FUSE Low Level API}
+Our initial prototype system used the standard FUSE ``high level'' API.  This
+API provides a full pathname for every operation.  As a result, each
+\code{mknod} call in our file creation experiment required resolving the PVFS
+path from the root of the filesystem.  This created an excessive amount of
+traffic on the server responsible for the filesystem root and bottlenecked the
+system.  We were able to resolve this problem by switching to the lowlevel API
+and running our benchmark utility from within the directory in which the files
+are to be created.
+
+\subsection{SkyeFS Client and PVFS}
+Our initial prototype included a fully multi-threaded client.  However, we
+quickly noticed that executing many operations in parallel (for example,
+using \code{make -j8} would result in long stalls while executing PVFS calls.
+To work around this problem, we currently run the client in the single
+threaded FUSE mode.
+
+The FUSE lowlevel API allows the filesystem to return from the callback
+without returning a result to FUSE.  After consulting with the PVFS
+developers, it has been suggested that using this functionality along with the
+asynchronous PVFS operations might allow concurrent operation without
+experiencing these stalls.  This was not attempted for this project because of
+the large engineering effort required to convert each operation to persist its
+state across asynchronous PVFS calls.
+
+\subsection{SkyeFS Server and PVFS}
+The \code{skye\_server} is based on the initial Giga+ prototype and uses a
+single thread to handle each incoming RPC connection.  As a result, it is easy
+for upwards of 100 client operations to be in flight concurrently.  The PVFS
+system interface keeps an array of state machines for all outstanding
+operations in the address space.  All threads which have an in-flight
+operation attempt to take a lock on this array and the thread which acquires
+the lock drives progress on all state machines in the array.
+
+The first problem that results from this design is that the array is of
+limited size.  Currently, the PVFS code statically defines the array of state
+machines to be of length 256.  If an incoming operation would overflow this
+array, an assertion is tripped.  To avoid tripping this insertion we
+implemented flow control in the form of a semaphore.  When the server starts
+the semaphore is initialized to a small value.  When a thread receives an RPC
+request, it downs the semaphore before issuing any PVFS requests.  When the
+thread completes its work, it will up the semaphore.  In this way, we prevent
+more than the semaphore's initial value threads from issuing PVFS requests
+concurrently.  In practice, we found that we needed to set this initial value
+as low as 32 to avoid tripping the assert.
+
+The other problem with this design is that it does not guarantee fairness to
+the requests on the array.  This means that while a request may have
+completed, the requesting thread may not notice this for a very long time.
+This introduces significant jitter into client response times and slows the
+entire system's throughput as a client is unnecessarily blocked on a server
+response.  To solve this problem, we further restrict the number of concurrent
+operations in flight by initializing our flow control semaphore to 12.
+Our testing indicated that this value is optimal in the 32 server case.
+
+\subsection{Split Performance}
+During a split the split thread must issue \code{readdir} calls to the
+partition which is being split.  While this is happening, additional creates
+may be issued against that partition.  We found that without external
+synchronization, this pattern of requests results in very poor PVFS
+performance.
+
+We wrote a test program to isolate this particular workload.  The program
+connects to a provided PVFS server using the system interface.  It then spawns
+10 threads which all create files in that directory until 5000 files are
+created.  It also spawns another thread that will list out the contents of
+that directory repeatedly, reporting the time taken each time.  The program
+supports three synchronization models for the threads to test different levels
+of interleaving of requests.
+
+In the unsynchronized model all threads are allowed to run without any
+synchronization.  On our test system, this required 42 seconds and the
+directory listings took between 2 and 12 seconds to complete with a median of
+7 seconds.
+
+In our create synchronized model, each of the 10 threads that issue creates
+synchronizes on a single mutex such that only one create is every in flight at
+a time.  With this model, 41 seconds were required to create the files and the
+listings took between 2 and 20 seconds to complete.
+
+In our final, everything synchronized model, all create threads and the
+readdir thread synchronized on the same mutex.  With this model, the creates
+take 43 seconds to complete and all listings take less than 200ms.
 \end{document}
